cabal-version: 2.4
name: doorctl-api
version: 0.1.0.0


library
  build-depends:
      aeson
    , base <5
    , bytestring
    , deepseq
    , postgresql-simple
    , serialise
    , servant
    , text
    , time

  if !impl(ghcjs)
    build-depends: base64, ed25519

  hs-source-dirs: src

  exposed-modules:
    DoorctlAPI

  ghc-options: -Wall -Werror
