cabal-version: 2.4
name: doorctl-api
version: 0.1.0.0

flag controller
  description: Set to true if this library is to be used on the door controller, rather than the server
  default: False

library
  build-depends:
      aeson
    , base <5
    , bytestring
    , deepseq
    , servant
    , text
    , time

  if !impl(ghcjs)
    build-depends:
       base64
     , ed25519
     , serialise

  if flag(controller)
    cpp-options: -DIS_DOOR_CONTROLLER
  else
    build-depends:
      postgresql-simple

  hs-source-dirs: src

  exposed-modules:
    DoorctlAPI

  ghc-options: -Wall -Werror
